--- a/index.html
+++ b/index.html
@@ -53,9 +53,7 @@
             </nav>
             <div class="box-logo">
                 <div class="logo">
-                    <a href="index.html">
-                        <img src="Picture/logo.png" alt="">
-                    </a>
+                    <h2 style="color: rgb(236, 24, 190); font-weight: bold;">DUYÊN STORE</h2>
                 </div>
             </div>
             <div class="box-icon">
@@ -317,13 +315,9 @@
         </div>
     </div>
     <div class="box-bg">
-        <div class="box-img">
-            <img class="pic-animation" src="Picture/animation.jpg" alt="">
-            <img class="pic-chair" src="Picture/img-1.png" alt="">
-        </div>
         <div class="box-content">
             <div class="title-content">
-                Funori furniture
+                Duyên Store
             </div>
             <div class="box-first-content">
                 <div class="first-content">
@@ -360,11 +354,11 @@
         <div class="box-first-banner">
             <div class="box-img-banner">
                 <a href="">
-                    <img src="Picture/banner-6-1.jpg" alt="">
+                    <img src="Picture/day-nau-an.jpg" alt="">
                 </a>
             </div>
             <div class="title-in-banner">
-                <h3>Revive your retreat</h3>
+                <h3>Sức sống</h3>
                 <a href="">
                     Shop Collection
                 </a>
@@ -373,11 +367,11 @@
         <div class="box-first-banner">
             <div class="box-img-banner">
                 <a href="">
-                    <img src="Picture/banner-7-1.jpg" alt="">
+                    <img src="Picture/sach-ki-nang-mem.jpg" alt="">
                 </a>
             </div>
             <div class="title-in-banner">
-                <h3>From loveseats to sectionals.</h3>
+                <h3>Yêu thích.</h3>
                 <a href="">
                     Shop Collection
                 </a>
@@ -408,32 +402,31 @@
         <div class="contact">
             <h2>CONTACT US</h2>
             <div class="in">
-                <div>Add :4 Copley Place, 7th Floor, Boston, MA 6</div>
-                <div>Tell : 866.453.4748</div>
-                <div>HR Fax: 810.222.5439</div>
-                <div>sales@funorifurniture.com</div>
+                <div>Cầu Giấy - Hà Nội</div>
+                <div>Tell : 0378 743 498</div>
+                <div>Mail : duyen.ht.0103@gmail.com</div>
             </div>
         </div>
         <div class="contact">
             <h2>CATEGOIRES</h2>
             <div class="in">
                 <a href="">
-                    <div>Furniture</div>
+                    <div>Lập trình</div>
                 </a>
                 <a href="">
-                    <div>Tables</div>
+                    <div>Kĩ năng mềm</div>
                 </a>
                 <a href="">
-                    <div>Seating</div>
+                    <div>Trinh thám</div>
                 </a>
                 <a href="">
-                    <div>Desks & office </div>
+                    <div>Nấu ăn</div>
                 </a>
                 <a href="">
-                    <div>Storage</div>
+                    <div>Khoa học</div>
                 </a>
                 <a href="">
-                    <div>Bed & Bath</div>
+                    <div>Tư duy logic</div>
                 </a>
             </div>
         </div>
@@ -441,31 +434,31 @@
             <h2>SERVICES</h2>
             <div class="in">
                 <a href="">
-                    <div>Sale</div>
+                    <div>Giảm giá</div>
                 </a>
                 <a href="">
-                    <div>Quick Ship</div>
+                    <div>Vận chuyển nhanh</div>
                 </a>
                 <a href="">
-                    <div>New Designs</div>
+                    <div>Xuất bản mới</div>
                 </a>
                 <a href="">
-                    <div>Accidental Fabric Protection</div>
+                    <div>Tư vấn nhanh</div>
                 </a>
                 <a href="">
-                    <div>Furniture Care</div>
+                    <div>Chăm sóc khách hàng</div>
                 </a>
                 <a href="">
-                    <div>Gift Cards</div>
+                    <div>Quà tặng</div>
                 </a>
             </div>
         </div>
         <div class="contact">
             <h2>JOIN US</h2>
             <div class="in">
-                <div style="margin-bottom: 25px;">Enter your email below to be the first to know 
+                <div style="margin-bottom: 25px;">Nhập email để là người đẩu tiên
                     <br>
-                    about new collections and product launches.
+                    sở hữu bộ sưu tập mới nhất.
                 </div>
                 <div class="box-email">
                     <input type="text" placeholder="Email adress...">
@@ -517,4 +510,4 @@
 </html>
 <script src="https://kit.fontawesome.com/eda05fcf5c.js" crossorigin="anonymous"></script>
 <script src="js/main.js"></script>
-
+<script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.7.2/axios.min.js" integrity="sha512-JSCFHhKDilTRRXe9ak/FJ28dcpOJxzQaCd3Xg8MyF6XFjODhy/YMCM8HW0TFDckNHWUewW+kfvhin43hKtJxAw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
